tests/checker/fail/ambiguous_http_entry.can
use canon/std/http/Body
use canon/std/http/Headers
use canon/std/http/Request
use canon/std/http/Response
use canon/std/http/Status

about = (Request) -> Response {
    Response(Body("") * Headers() * Status(200))
}

home = (Request) -> Response {
    Response(Body("") * Headers() * Status(200))
}
